--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div>
+<div class="box">
 	<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p></div>
 	
 	<!-- the entire body must be written by student -->
